--- a/Acceuil.html
+++ b/Acceuil.html
@@ -6,9 +6,6 @@
     <title>Document</title>
 </head>
 <body>
-    <p>testst</p>
-    <h1>Hello world</h1>
-    <p>Salut c'est un teste
-    </p>
+    <p>Salut</p>
 </body>
 </html>
