barre horizontale et verticale

--- a/Acceuil.html
+++ b/Acceuil.html
@@ -3,19 +3,43 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Bookmovie </title>
+    <title>Book Movie</title>
+    <link rel="stylesheet" href="acceuil.css">
 </head>
 <body>
-    <h1> Bookmovie</h1></h>
-    <meta charset="UTF-8">
-  <title>Texte centré</title>
-  <style>
-    .centre {
-      text-align: center;
-    }
-  </style>
-</head>
-<body>
-  <p1 class="centre">Accueil   Livre   Manga</p1>
+    <header>
+    <!-- Logo et titre -->
+    <div class="logo-container">
+      <img src="logo.png" alt="Logo">
+      <div class="logo-text">Book Movie</div>
+    </div>
+
+    <!-- Menu centré -->
+    <nav>
+      <a href="#">Accueil</a>
+      <a href="#">Inscription</a>
+      <a href="#">mieux nous connaitre</a>
+    </nav>
+  </header>
+
+  <div class="sidebar">
+    <ul>
+        <li>Tous</li>
+        <li>Manga</li>
+        <li>Thriller</li>
+        <li>Classique</li>
+        <li>Science-Fiction</li>
+        <li>Fantaisie</li>
+        <li>Romance</li>
+        <li>Aventure</li>
+        <li>Jeunesse</li>
+        <li>Horreur</li>
+    </ul>
+  </div>
+  <div class="search-container">
+      <input type="text" placeholder="Rechercher...">
+  </div>
+  </div>
 </body>
 </html>
+
