Page Manga avec 3 movie card

--- a/Page.html
+++ b/Page.html
@@ -13,22 +13,45 @@
     <p class="petits-texte">Découvrez les mangas qui ont été adaptés en films et séries</p>
     </div>
     <div id="filtre">
-        <h2 class="titre">Filtres</h2>
+        <h2 class="titre-filtre">Filtres</h2>
         <div class="filtre-liste">
             <div>
                 <p class="texte-filtre">Type de média</p>
-                <select name="choix" id="cars">
-                    <option value="Film">Films</option>
-                    <option value="Séries">Séries</option>
+                <select id="choix">
+                    <option value="1">Films</option>
+                    <option value="2">Séries</option>
                 </select>
             </div>
             <div>
-                <P class="texte-filtre">Source</P>
-            </div>
-            <div>
-                <p class="texte-filtre">trier par</p>
+                <P class="texte-filtre">Trier par</P>
+                <select id="choix">
+                    <option value="1">Genre</option>
+                    <option value="2">Ordre alphabétique</option>
+                    <option value="3">le plus réçent</option>
+                </select>
             </div>
         </div>
 
+    </div>
+    <div class="movie-card">
+        <img src="https://tse3.mm.bing.net/th/id/OIP.K8ycCCpFBaUrjfAOugrKEQEsC7?cb=ucfimg2&pid=Api&ucfimg=1" alt="Demon Slayer" class="movie-poster">
+        <h2 class="movie-title">Demon slayer </h2>
+        <p class="movie-rating">⭐4.3</p>
+        <p class="movie-description">Haruo Sotozaki offre une adaptation musicale puissante du classique de Kimetsu no Yaiba...</p>
+        <p class="movie-year">2025 - Haruo Sotozaki</p>
+    </div>
+    <div class="movie-card">
+        <img src="https://tse1.mm.bing.net/th/id/OIP.dzwncBJl4XxifkIQZhGNiAHaEK?cb=ucfimg2&pid=Api&ucfimg=1" alt="Demon Slayer" class="movie-poster">
+        <h2 class="movie-title">Jujutsu Kaisen 0 </h2>
+        <p class="movie-rating">⭐4.5</p>
+        <p class="movie-description">Jujutsu Kaisen 0 est un film japonais réalisé par Park Seong-hu, sorti en 2021. Il s'agit de l'adaptation du prologue du manga Jujutsu Kaisen.</p>
+        <p class="movie-year">2021 - Park Seong-hu</p>
+    </div>
+    <div class="movie-card">
+        <img src="https://tse1.mm.bing.net/th/id/OIP.RSocTheL4I57TkuQRRtAuwHaEK?cb=ucfimg2&pid=Api&ucfimg=1" alt="Demon Slayer" class="movie-poster">
+        <h2 class="movie-title">Bleach</h2>
+        <p class="movie-rating">⭐3</p>
+        <p class="movie-description">Bleach est un film d'action fantasy japonais coécrit et réalisé par Shinsuke Satō, sorti en 2018. Il s'agit de l'adaptation du manga éponyme de Tite Kubo.</p>
+        <p class="movie-year">2018 - Shinsuke Satō</p>
     </div>
 </body>
