Catalogue Manga avec 5 movie card

--- a/Page.html
+++ b/Page.html
@@ -33,25 +33,48 @@
         </div>
 
     </div>
-    <div class="movie-card">
-        <img src="https://tse3.mm.bing.net/th/id/OIP.K8ycCCpFBaUrjfAOugrKEQEsC7?cb=ucfimg2&pid=Api&ucfimg=1" alt="Demon Slayer" class="movie-poster">
-        <h2 class="movie-title">Demon slayer </h2>
-        <p class="movie-rating">⭐4.3</p>
-        <p class="movie-description">Haruo Sotozaki offre une adaptation musicale puissante du classique de Kimetsu no Yaiba...</p>
-        <p class="movie-year">2025 - Haruo Sotozaki</p>
-    </div>
-    <div class="movie-card">
-        <img src="https://tse1.mm.bing.net/th/id/OIP.dzwncBJl4XxifkIQZhGNiAHaEK?cb=ucfimg2&pid=Api&ucfimg=1" alt="Demon Slayer" class="movie-poster">
-        <h2 class="movie-title">Jujutsu Kaisen 0 </h2>
-        <p class="movie-rating">⭐4.5</p>
-        <p class="movie-description">Jujutsu Kaisen 0 est un film japonais réalisé par Park Seong-hu, sorti en 2021. Il s'agit de l'adaptation du prologue du manga Jujutsu Kaisen.</p>
-        <p class="movie-year">2021 - Park Seong-hu</p>
-    </div>
-    <div class="movie-card">
-        <img src="https://tse1.mm.bing.net/th/id/OIP.RSocTheL4I57TkuQRRtAuwHaEK?cb=ucfimg2&pid=Api&ucfimg=1" alt="Demon Slayer" class="movie-poster">
-        <h2 class="movie-title">Bleach</h2>
-        <p class="movie-rating">⭐3</p>
-        <p class="movie-description">Bleach est un film d'action fantasy japonais coécrit et réalisé par Shinsuke Satō, sorti en 2018. Il s'agit de l'adaptation du manga éponyme de Tite Kubo.</p>
-        <p class="movie-year">2018 - Shinsuke Satō</p>
+    <div class="Movies">
+        <div class="movie-card">
+            <img src="https://tse3.mm.bing.net/th/id/OIP.K8ycCCpFBaUrjfAOugrKEQEsC7?cb=ucfimg2&pid=Api&ucfimg=1" alt="Demon Slayer" class="movie-poster">
+            <h2 class="movie-title">Demon slayer </h2>
+            <p class="movie-rating">⭐4.3</p>
+            <p class="movie-description">Haruo Sotozaki offre une adaptation musicale puissante du classique de Kimetsu no Yaiba...</p>
+            <p class="movie-year">2025 - Haruo Sotozaki</p>
+        </div>
+        <div class="movie-card">
+            <img src="https://tse1.mm.bing.net/th/id/OIP.dzwncBJl4XxifkIQZhGNiAHaEK?cb=ucfimg2&pid=Api&ucfimg=1" alt="Jujutsu Kaisen" class="movie-poster">
+            <h2 class="movie-title">Jujutsu Kaisen 0 </h2>
+            <p class="movie-rating">⭐4.5</p>
+            <p class="movie-description">Jujutsu Kaisen 0 est un film japonais réalisé par Park Seong-hu, sorti en 2021. Il s'agit de l'adaptation du prologue du manga Jujutsu Kaisen.</p>
+            <p class="movie-year">2021 - Park Seong-hu</p>
+        </div>
+        <div class="movie-card">
+            <img src="https://tse1.mm.bing.net/th/id/OIP.RSocTheL4I57TkuQRRtAuwHaEK?cb=ucfimg2&pid=Api&ucfimg=1" alt="Bleach" class="movie-poster">
+            <h2 class="movie-title">Bleach</h2>
+            <p class="movie-rating">⭐3</p>
+            <p class="movie-description">Bleach est un film d'action fantasy japonais coécrit et réalisé par Shinsuke Satō, sorti en 2018. Il s'agit de l'adaptation du manga éponyme de Tite Kubo.</p>
+            <p class="movie-year">2018 - Shinsuke Satō</p>
+        </div>
+        <div class="movie-card">
+            <img src="https://tse2.mm.bing.net/th/id/OIP.3d8OWfZF1rIIyvf-xQZywgHaEK?cb=ucfimg2&pid=Api&ucfimg=1" alt="GTO le film" class="movie-poster">
+            <h2 class="movie-title">GTO, le film</h2>
+            <p class="movie-rating">⭐4,3</p>
+            <p class="movie-description">Eikichi Onizuka est un jeune professeur remplaçant de 26 ans. Kaoru Kitajima quand à elle est journaliste et est sur les traces d'un criminel ayant agressé plusieurs femmes. Le professeur est le premier suspect de la jeune femme, en partie à causes de ses méthodes d'enseignement très partucilères...Ce film est l'adaptation de la série ...</p>
+            <p class="movie-year">1999 - Masayuki Suzuki</p>
+        </div>
+        <div class="movie-card">
+            <img src="https://tse3.mm.bing.net/th/id/OIP.AwDpQxHsEvARi1_X-pK01AHaEK?cb=ucfimg2&pid=Api&ucfimg=1" alt="Kenshin : kyoto Inferno" class="movie-poster">
+            <h2 class="movie-title">Kenshin : Kyoto Inferno</h2>
+            <p class="movie-rating">⭐3</p>
+            <p class="movie-description">Une nouvelle vie commence pour Kenshin jusqu'au jour où il est appelé par le gouvernement. Un assassin a été trahi et laissé pour mort.</p>
+            <p class="movie-year">2014 - Shinsuke Keishi Ōtomo</p>
+        </div>
+        <div class="movie-card">
+            <img src="https://tse4.mm.bing.net/th/id/OIP.5myQo-XHIswQYr_AvrFOCAHaD4?pid=Api" alt="Assassination Classroom" class="movie-poster">
+            <h2 class="movie-title">Assassination Classroom</h2>
+            <p class="movie-rating">⭐2.25</p>
+            <p class="movie-description">Une créature a détruit la Lune et souhaite s'attaquer à la Terre. Cette créature est nommée professeur principale d'une classe de collège et les élèves doivent l'anéantir.</p>
+            <p class="movie-year">2015 - Eiichirō Hasumi</p>
+        </div>
     </div>
 </body>
