Amélioration du footer et ajout d'un bouton dns le header

--- a/Page.html
+++ b/Page.html
@@ -8,10 +8,12 @@
 </head>
 <body>
     <div class="topnav">
-    <a class="active" href="#home">Menu</a>
-    <a href="#about">à propos</a>
-    <a href="#contact">Contact</a>
-    <input type="text" placeholder="Search..">
+        <a class="active" href="#home">Menu</a>
+        <a href="#about">À propos</a>
+        <a href="#contact">Contact</a>
+        <button type="submit">Rechercher</button>
+        <input type="text" placeholder="Search.."  >
+         
     </div>
     <div>
     <!--Barre en haut du site -->
@@ -86,8 +88,51 @@
         </div>
     </div>
     <div>
-        <footer class="footer">
-  <p id="texte-footer">&copy; 2025 BookMovie. Tous droits réservés.</p>
+       <footer class="footer">
+        <div class="footer-container">
+
+        <!-- Colonne Logo -->
+        <div class="footer-col logo-col">
+            <img src="/mnt/data/a941ded8-c446-4a56-a3fc-71ba19622ffc.png" alt="Logo" class="footer-logo">
+            <a href="#" class="join-btn">Rejoindre la communauté</a>
+        </div>
+
+        <!-- Colonne 1 -->
+        <div class="footer-col">
+            <h3>Les bases</h3>
+            <a href="#">À propos</a>
+            <a href="#">Contact</a>
+            <a href="#">API Documentation</a>
+            <a href="#">API Business</a>
+            <a href="#">Statut du système</a>
+        </div>
+
+        <!-- Colonne 2 -->
+        <div class="footer-col">
+            <h3>S'impliquer</h3>
+            <a href="#">Ajouter un film</a>
+            <a href="#">Ajouter une série</a>
+            <a href="#">Contributions</a>
+        </div>
+
+        <!-- Colonne 3 -->
+        <div class="footer-col">
+            <h3>Communauté</h3>
+            <a href="#">Règles</a>
+            <a href="#">Discussions</a>
+            <a href="#">Top contributeurs</a>
+            <a href="#">Assistance</a>
+        </div>
+
+        <!-- Colonne 4 -->
+        <div class="footer-col">
+            <h3>Mentions légales</h3>
+            <a href="#">Conditions d’utilisation</a>
+            <a href="#">Confidentialité</a>
+            <a href="#">API – Conditions</a>
+            <a href="#">Politiques de droits</a>
+        </div>
+    </div>
 </footer>
     </div>
     <script src = "Page.JS"></script>
