Modification du bouton

--- a/Page.html
+++ b/Page.html
@@ -45,7 +45,7 @@
     </div>
 
     <!-- Résultats -->
-    <div class="Movies" id="results">
+    <div class="Livres" id="results">
         <!-- Les résultats de la recherche apparaîtront ici -->
     </div>
 
