--- a/Page.html
+++ b/Page.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>BookMovie</title>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/Page.css">
 </head>
 <body>
@@ -52,13 +53,10 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="footer-container">
-            <!-- Colonne Logo -->
             <div class="footer-col logo-col">
                 <img src="image/logobm.jpg" alt="Logo" class="footer-logo">
                 <a href="#" class="join-btn">Rejoindre la communauté</a>
             </div>
-
-            <!-- Autres colonnes -->
             <div class="footer-col">
                 <h3>Les bases</h3>
                 <a href="#">À propos</a>
