Ajout caroussel + bonne version

--- a/Page.html
+++ b/Page.html
@@ -45,9 +45,13 @@
         </div>
     </div>
 
-    <!-- Résultats -->
-    <div class="Livres" id="results">
-        <!-- Les résultats de la recherche apparaîtront ici -->
+    <!-- Carrousel des résultats -->
+    <div class="carousel-wrapper">
+        <button id="prevBtn" class="carousel-btn">&#10094;</button>
+        <div class="Livres" id="results">
+            <!-- Les cartes s'affichent ici -->
+        </div>
+        <button id="nextBtn" class="carousel-btn">&#10095;</button>
     </div>
 
     <!-- Footer -->
@@ -93,7 +97,6 @@
         </div>
     </div>
 
-    <!-- Script JS -->
     <script src="js/Page.js" defer></script>
 </body>
 </html>
