--- a/Page.html
+++ b/Page.html
@@ -13,7 +13,7 @@
     <nav class="topnav">
         <a class="active" href="#home">Menu</a>
         <a href="#about">À propos</a>
-        <a href="#contact">Contact</a>
+        <a href="Contact.html">Contact</a>
 
         <div class="search-container">
             <input type="text" placeholder="Rechercher un livre..." id="searchInput">
