Livres sans cover = pas afficher

--- a/Contact.html
+++ b/Contact.html
@@ -10,10 +10,39 @@
     <nav class="topnav">
         <a class="active" href="#home">Menu</a>
         <a href="#about">À propos</a>
-        <a href="Contact.html">Contact</a>
+        <a href="Page.html">Recherche</a>
     </div>
-     <h1>Contact</h1>
-    <p>Veullez nous contactez via cette adresse
+    <h1 class="titre-principal">Contactez-nous</h1>
+
+    <h3 class="texte-contact">Nous serions ravis de vous aider ou de répondre à vos questions.</p>
+    <p><strong>Email :</strong> contact@bookmovie.com</p>
+    <p><strong>Téléphone :</strong> +33 7 69 29 06 39</p>
+    <p><strong>Adresse :</strong> 120 Rue de Verdin, 92800 Puteaux, France</p>
+    <img src="image/map.jpg"
+    alt="localisation">
+    
     </p>
+    <footer class="footer">
+        <div class="footer-container">
+            <div class="footer-col logo-col">
+                <img src="image/logobm.jpg" alt="Logo BookMovie" class="footer-logo">
+                <button class="join-btn">Rejoindre la communauté</button>
+            </div>
+            <div class="footer-col">
+                <h3>Les bases</h3>
+                <a href="#">À propos</a>
+                <a href="#">Contact</a>
+                <a href="#">API Documentation</a>
+            </div>
+            <div class="footer-col">
+                <h3>Mentions légales</h3>
+                <a href="#">Conditions d’utilisation</a>
+                <a href="#">Confidentialité</a>
+                <a href="#">API – Conditions</a>
+                <a href="#">Politiques de droits</a>
+            </div>
+        </div>
+    </footer>
+    <script src="js/Page.js" defer></script>
 </body>
 </html>
