--- a/Page.html
+++ b/Page.html
@@ -24,7 +24,7 @@
     <!-- Titre principal -->
     <header>
         <h1 class="titre-principal">Livres et Mangas</h1>
-        <p class="petits-texte">Découvrez les livres et mangas de votre choix</p>
+        <p class="petits-texte">Cherchez et trouvez les livres et mangas de votre choix</p>
     </header>
 
     <!-- Section Filtres -->
@@ -70,7 +70,7 @@
             <div class="footer-col">
                 <h3>Les bases</h3>
                 <a href="#">À propos</a>
-                <a href="#">Contact</a>
+                <a href="Contact.html">Contact</a>
                 <a href="#">API Documentation</a>
             </div>
             <div class="footer-col">
