Connexions pages à propos

--- a/Apropos.html
+++ b/Apropos.html
@@ -9,20 +9,12 @@
     <div>
     <nav class="topnav">
         <a class="active" href="#home">Menu</a>
-        <a href="#about">À propos</a>
         <a href="Page.html">Recherche</a>
+        <a href="Contact.html">Contact</a>
     </div>
-    <h1 class="titre-principal">Contactez-nous</h1>
+    <h1 class="titre-principal">En savoir plus sur notre projet</h1>
 
-    <h3 class="texte-contact">Nous serions ravis de vous aider ou de répondre à vos questions.</p>
-    <p><strong>Email :</strong> contact@bookmovie.com</p>
-    <p><strong>Téléphone :</strong> +33 7 69 29 06 39</p>
-    <p><strong>Adresse :</strong> 120 Rue de Verdin, 92800 Puteaux, France</p>
-    <img src="image/map.jpg"
-    alt="localisation">
-    
-    </p>
-    <footer class="footer">
+     <footer class="footer">
         <div class="footer-container">
             <div class="footer-col logo-col">
                 <img src="image/logobm.jpg" alt="Logo BookMovie" class="footer-logo">
@@ -31,7 +23,7 @@
             <div class="footer-col">
                 <h3>Les bases</h3>
                 <a href="Apropos.html">À propos</a>
-                <a href="#">Contact</a>
+                <a href="Contact.html">Contact</a>
                 <a href="#">API Documentation</a>
             </div>
             <div class="footer-col">
@@ -43,6 +35,3 @@
             </div>
         </div>
     </footer>
-    <script src="js/Page.js" defer></script>
-</body>
-</html>
