--- a/Page.html
+++ b/Page.html
@@ -12,7 +12,7 @@
     <!-- Barre de menu -->
     <nav class="topnav">
         <a class="active" href="#home">Menu</a>
-        <a href="#about">À propos</a>
+        <a href="Apropos.html">À propos</a>
         <a href="Contact.html">Contact</a>
 
         <div class="search-container">
